# multi_mcp_server

./: .env.example  .gitignore  .ruff.toml  CLAUDE.md  README.md  pyproject.toml  server.py
.qoder/repowiki/zh/content/: MySQL数据库服务.md  快速入门.md  技术栈与依赖.md  文档向量化服务.md  知识库检索服务.md  配置指南.md  项目概述.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
embedding/: README.md  embedding.py
embedding/docs/java/: service.java.vm.md  sub-domain.java.vm.md
embedding/docs/sql/: sql.vm.md
embedding/docs/vue/: index-tree.vue.vm.md
embedding/docs/vue/v3/: Form.vue.vm.md  index-tree.vue.vm.md
embedding/docs/xml/: mapper.xml.vm.md
fs_mcp/: __init__.py
knowledge_mcp/: __init__.py
src/common/: cache.py  mcp_cli.py
src/demo_mcp/: server.py
src/element_plus_mcp/: README.md  github.py  models.py  server.py
src/embedding/: __init__.py  embedding.py  test_embedding.py
src/embedding/docs/java/: controller.java.vm.md  domain.java.vm.md  mapper.java.vm.md  serviceImpl.java.vm.md
src/embedding/docs/js/: api.js.vm.md
src/embedding/docs/vue/: index.vue.vm.md
src/fs_mcp/: server.py
src/knowledge_mcp/: server.py
src/mysql_mcp/: server.py  types.py
src/template_mcp/: README.md  server.py
src/template_mcp/sample/java/: controller.java  domain.java  mapper.java  service.java  serviceImpl.java
src/template_mcp/sample/js/: api.js
src/template_mcp/sample/sql/: sql
src/template_mcp/sample/xml/: mapper.xml
src/template_mcp/template/java/: controller.java.vm  domain.java.vm  mapper.java.vm  service.java.vm  serviceImpl.java.vm  sub-domain.java.vm
(+31 files in other folders)
