[project]
name = "test-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.12.4",
    "psycopg[binary]>=3.1.0",
    "requests==2.31.0",
]

[project.scripts]
embed = "embedding.embedding:main"
test_search = "embedding.test_embedding:main"
fs_mcp = "fs_mcp.server:main"
knowledge_mcp = "knowledge_mcp.server:main"


[tool.uv]
package = true

[tool.setuptools]
packages = ["embedding", "fs_mcp", "knowledge_mcp"]
