[project]
name = "test-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "mcp[cli]>=1.12.4",
    "mysql-connector-python>=9.4.0",
    "psycopg[binary]>=3.1.0",
    "requests==2.31.0",
]

[project.scripts]
embed = "embedding.embedding:main"
test_search = "embedding.test_embedding:main"
fs_mcp = "fs_mcp.server:main"
knowledge_mcp = "knowledge_mcp.server:main"
element_plus_mcp = "element_plus_mcp.server:main"
mysql_mcp = "mysql_mcp.server:main"


[tool.uv]
package = true

[tool.setuptools]
packages = ["embedding", "fs_mcp", "knowledge_mcp", "element_plus_mcp", "mysql_mcp"]
package-dir = { "" = "src" }

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.10",
]
